# instant-otp-gen

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
instant_otp_gen/: __init__.py  core.py
tests/: test_instant_otp_gen.py
