[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "instant-otp-gen"
version = "1.0.0"
description = "Instant generate totp/hotp one-time passwords"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{name = "raccoonette"}]

[project.urls]
Homepage = "https://github.com/MopicMP/instant-otp-gen"
